# sidescopes

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DESIGN.md  README.md
.github/workflows/: ci.yml  release.yml
assets/icon/: sidescopes.icns
bench/: CMakeLists.txt  bench_color.cpp  bench_scopes.cpp
cmake/: GenerateVersion.cmake  Info.plist.in  sidescopes.manifest  sidescopes.rc.in
docs/: CODESTYLE.md  MODULES.md  RELEASING.md
include/sidescopes/: module.h
scripts/: bench-compare.py  bench.ps1  bench.sh  corpus_ingest.py  generate_icon.py
spike/: settings_window.cpp  settings_window_wx.cpp  settings_window_wx.manifest
src/app/: about_window.cpp  about_window.h  adaptive_detail.cpp  adaptive_detail.h  app.cpp  app.h  app_attach.cpp  app_region_pick.cpp  app_startup.cpp  app_startup.h  attach_controller.cpp  attach_controller.h  border_label.cpp  border_label.h  capture_controller.cpp  capture_controller.h  color_picker_common.cpp  color_picker_common.h  color_picker_deck.cpp  color_picker_deck.h  color_picker_difference.cpp  color_picker_difference.h  color_picker_hero.cpp  color_picker_hero.h  color_readout.cpp  color_readout.h  context_menu.cpp  context_menu.h  cursor_sampler.cpp  cursor_sampler.h  face_lock.cpp  face_lock.h  face_lock_controller.cpp  face_lock_controller.h  face_pin.cpp  face_pin.h  frame_timer.cpp  frame_timer.h  hex_font.cpp  hex_font.h  (+62 more)
src/core/: analysis_worker.cpp  analysis_worker.h  app_region_memory.cpp  app_region_memory.h  color_lab.cpp  color_lab.h  content_fence.cpp  content_fence.h  diagnostics.cpp  diagnostics.h  frame.cpp  frame.h  frame_mailbox.h  marker_smoother.cpp  marker_smoother.h  parallel_for.h  photo_region_detector.cpp  photo_region_detector.h  preferences.cpp  preferences.h  region_hash.cpp  region_hash.h  region_kind.h  region_suggestions.cpp  region_suggestions.h  trace_intensity.cpp  trace_intensity.h
src/core/scopes/: graticule.cpp  graticule.h  histogram.cpp  histogram.h  scope_types.h  trace_response.h  vectorscope.cpp  vectorscope.h  vectorscope_graticule.cpp  waveform.cpp  waveform.h
src/modules/: histogram_module.cpp  module_export.h  module_loader.cpp  module_loader.h  module_registry.cpp  module_registry.h  vectorscope_module.cpp  waveform_module.cpp
src/platform/: desktop.h  face_detection.h  focus_resolution.cpp  focus_resolution.h  graphics.h  icons.cpp  icons.h  native_menu.h  region_geometry.cpp  region_geometry.h  region_selection.h  screen_capture.h
src/platform/macos/: desktop.mm  face_detection.mm  graphics.mm  native_menu.mm  region_border_view.h  region_border_view.mm  region_picker_view.h  region_picker_view.mm  region_selection.mm  region_selection_geometry.h  screen_capture.mm
src/platform/windows/: capture_visibility.h  desktop.cpp  display_identity.h  face_detection.cpp  graphics.cpp  native_menu.cpp  region_border_view.cpp  region_border_view.h  region_geometry.cpp  region_geometry.h  region_overlay_surface.h  region_picker_view.cpp  region_picker_view.h  region_selection.cpp  screen_capture.cpp  wide_strings.h
tests/: .clang-tidy  CMakeLists.txt  test_adaptive_detail.cpp  test_analysis_worker.cpp  test_app_region_memory.cpp  test_attach_controller.cpp  test_border_label.cpp  test_capture_controller.cpp  test_color_lab.cpp  test_content_fence.cpp  test_corpus.cpp  test_cursor_sampler.cpp  test_diagnostics.cpp  test_face_lock.cpp  test_face_lock_controller.cpp  test_face_pin.cpp  test_focus_resolution.cpp  test_frame.cpp  test_frame_mailbox.cpp  test_graticule.cpp  test_histogram.cpp  test_icons.cpp  test_layout_preset_store.cpp  test_marker_smoother.cpp  test_module_loader.cpp  test_modules.cpp  test_overlay_style.cpp  test_pane_layout.cpp  test_parallel_for.cpp  test_param_menu.cpp  test_photo_region_detector.cpp  test_pin_board.cpp  test_preferences.cpp  test_region_coordinator.cpp  test_region_geometry.cpp  test_region_hash.cpp  test_region_picker.cpp  test_region_suggestions.cpp  test_scope_goldens.cpp  test_scope_layout.cpp  (+13 more)
tests/support/: desktop_stubs.cpp  desktop_stubs.h  fake_capture.h  region_overlay_stubs.cpp  region_overlay_stubs.h  scope_image.h  temp_file.h  test_frame.h
tests/ui/: CMakeLists.txt  smoke_test.cpp  test_layout_ui.cpp  test_pipeline_ui.cpp  test_smoke.cpp  test_view_ui.cpp  ui_test_harness.cpp  ui_test_harness.h
